accelerated-domains: add sknbj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76389,6 +76389,7 @@ server=/skjcsc.com/114.114.114.114
 server=/skland.com/114.114.114.114
 server=/skldoor.com/114.114.114.114
 server=/sklinux.com/114.114.114.114
+server=/sknbj.com/114.114.114.114
 server=/skomart.com/114.114.114.114
 server=/skongmx.com/114.114.114.114
 server=/skp-beijing.com/114.114.114.114
