accelerated-domains: add xinszy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91479,6 +91479,7 @@ server=/xinss.net/114.114.114.114
 server=/xinstall.com/114.114.114.114
 server=/xinstatic.com/114.114.114.114
 server=/xinsuyang.xyz/114.114.114.114
+server=/xinszy.com/114.114.114.114
 server=/xintaizhou.com/114.114.114.114
 server=/xintajixie.com/114.114.114.114
 server=/xinteenergy.com/114.114.114.114
