--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95079,6 +95079,7 @@ server=/yiliit.com/114.114.114.114
 server=/yilijet.com/114.114.114.114
 server=/yilingshop.com/114.114.114.114
 server=/yilinweb.com/114.114.114.114
+server=/yilishiji.com/114.114.114.114
 server=/yillionbank.com/114.114.114.114
 server=/yilong.com/114.114.114.114
 server=/yilongnews.com/114.114.114.114
