--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98925,6 +98925,7 @@ server=/zgc-dsa.org/114.114.114.114
 server=/zgc261.com/114.114.114.114
 server=/zgcbank.com/114.114.114.114
 server=/zgcbb.com/114.114.114.114
+server=/zgccity.com/114.114.114.114
 server=/zgcdiy.com/114.114.114.114
 server=/zgchawang.com/114.114.114.114
 server=/zgchawenhua.com/114.114.114.114
