accelerated-domains: add zomanbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101480,6 +101480,7 @@ server=/zol.com/114.114.114.114
 server=/zollty.com/114.114.114.114
 server=/zoloz.net/114.114.114.114
 server=/zolsky.com/114.114.114.114
+server=/zomanbio.com/114.114.114.114
 server=/zombiescat.com/114.114.114.114
 server=/zomiu.com/114.114.114.114
 server=/zon100.com/114.114.114.114
