--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64334,6 +64334,7 @@ server=/nrbbearing.com/114.114.114.114
 server=/nrdzqwd.com/114.114.114.114
 server=/nrec.com/114.114.114.114
 server=/nresm.com/114.114.114.114
+server=/nri-beijing.com/114.114.114.114
 server=/nrisc.com/114.114.114.114
 server=/nrmchina.com/114.114.114.114
 server=/nrnr.cc/114.114.114.114
