--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15172,6 +15172,7 @@ server=/bjgas.com/114.114.114.114
 server=/bjgcl.com/114.114.114.114
 server=/bjgfa.com/114.114.114.114
 server=/bjggk.com/114.114.114.114
+server=/bjgjjcapital.com/114.114.114.114
 server=/bjgjtjk.com/114.114.114.114
 server=/bjglxf.com/114.114.114.114
 server=/bjglxt.com/114.114.114.114
