--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27375,6 +27375,7 @@ server=/dqyq.com/114.114.114.114
 server=/dqyxcy.com/114.114.114.114
 server=/dqzboy.com/114.114.114.114
 server=/dqzjz.com/114.114.114.114
+server=/dr-bj.com/114.114.114.114
 server=/dr-jm.com/114.114.114.114
 server=/dr-ku.com/114.114.114.114
 server=/dr009.com/114.114.114.114
