accelerated-domains: add jncec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50048,6 +50048,7 @@ server=/jnbctv.com/114.114.114.114
 server=/jnbosai.com/114.114.114.114
 server=/jnbuscard.com/114.114.114.114
 server=/jncarw.com/114.114.114.114
+server=/jncec.com/114.114.114.114
 server=/jncfcj.com/114.114.114.114
 server=/jncfjt.com/114.114.114.114
 server=/jncgzl.com/114.114.114.114
