--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76818,6 +76818,7 @@ server=/snowbeasts.com/114.114.114.114
 server=/snowdream.tech/114.114.114.114
 server=/snowflake.pink/114.114.114.114
 server=/snowkey.com/114.114.114.114
+server=/snowlotusgroup.com/114.114.114.114
 server=/snowwide.com/114.114.114.114
 server=/snowyimall.com/114.114.114.114
 server=/snps.tech/114.114.114.114
