accelerated-domains: add tianliwindpower.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81076,6 +81076,7 @@ server=/tianlailive.com/114.114.114.114
 server=/tianlan.net/114.114.114.114
 server=/tianli-blog.club/114.114.114.114
 server=/tianlin001.com/114.114.114.114
+server=/tianliwindpower.com/114.114.114.114
 server=/tianlongshop.com/114.114.114.114
 server=/tianlun.net/114.114.114.114
 server=/tianlun100.com/114.114.114.114
