--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83099,6 +83099,7 @@ server=/tvbaoji.com/114.114.114.114
 server=/tvbbj.com/114.114.114.114
 server=/tvblack.com/114.114.114.114
 server=/tvbwind.com/114.114.114.114
+server=/tvcbj.com/114.114.114.114
 server=/tvcbook.com/114.114.114.114
 server=/tvccc.org/114.114.114.114
 server=/tventry.com/114.114.114.114
