--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14002,6 +14002,7 @@ server=/beijingxiantour.com/114.114.114.114
 server=/beijingxinzhuoyue.com/114.114.114.114
 server=/beijingyouxi.com/114.114.114.114
 server=/beijingyuanxin.com/114.114.114.114
+server=/beijingzc.com/114.114.114.114
 server=/beijiu.ink/114.114.114.114
 server=/beijzc.com/114.114.114.114
 server=/beikeba.com/114.114.114.114
