accelerated-domains: add bjflc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15162,6 +15162,7 @@ server=/bjesound.com/114.114.114.114
 server=/bjewaytek.com/114.114.114.114
 server=/bjexmail.com/114.114.114.114
 server=/bjexx.com/114.114.114.114
+server=/bjflc.com/114.114.114.114
 server=/bjfmart.com/114.114.114.114
 server=/bjfqy.com/114.114.114.114
 server=/bjfriendshiphotel.com/114.114.114.114
