--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48469,6 +48469,7 @@ server=/jianghaiqu.net/114.114.114.114
 server=/jianghaosm.com/114.114.114.114
 server=/jianghehuagong.com/114.114.114.114
 server=/jianghui.xyz/114.114.114.114
+server=/jiangidea.com/114.114.114.114
 server=/jiangjiaolong.com/114.114.114.114
 server=/jiangjiuren.com/114.114.114.114
 server=/jiangjizhong.com/114.114.114.114
