accelerated-domains: add nanoinglobal.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62154,6 +62154,7 @@ server=/nanobody-biolab.com/114.114.114.114
 server=/nanochrom.com/114.114.114.114
 server=/nanoeast.net/114.114.114.114
 server=/nanoer.net/114.114.114.114
+server=/nanoinglobal.com/114.114.114.114
 server=/nanojanus.com/114.114.114.114
 server=/nanomicro.com/114.114.114.114
 server=/nanomotions.com/114.114.114.114
