accelerated-domains: add oabc.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64739,6 +64739,7 @@ server=/oa7day.com/114.114.114.114
 server=/oa8000.com/114.114.114.114
 server=/oa8858.com/114.114.114.114
 server=/oaavv.com/114.114.114.114
+server=/oabc.cc/114.114.114.114
 server=/oabg.net/114.114.114.114
 server=/oact.net/114.114.114.114
 server=/oadz.com/114.114.114.114
