accelerated-domains: add oushisheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65683,6 +65683,7 @@ server=/ousaikj.com/114.114.114.114
 server=/oushangstyle.com/114.114.114.114
 server=/oushidiban.net/114.114.114.114
 server=/oushinet.com/114.114.114.114
+server=/oushisheng.com/114.114.114.114
 server=/oushivoyages.com/114.114.114.114
 server=/oushiyimulayou.com/114.114.114.114
 server=/ousweixin.com/114.114.114.114
