--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30335,6 +30335,7 @@ server=/fakeluxurywatches.com/114.114.114.114
 server=/faku-airport.net/114.114.114.114
 server=/falconnet.app/114.114.114.114
 server=/falconsending.com/114.114.114.114
+server=/falcontalent.com/114.114.114.114
 server=/falomall.com/114.114.114.114
 server=/faloo.com/114.114.114.114
 server=/fameile.net/114.114.114.114
