accelerated-domains: add wistapharma.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87893,6 +87893,7 @@ server=/wison-engineering.com/114.114.114.114
 server=/wison.com/114.114.114.114
 server=/wispower.com/114.114.114.114
 server=/wisrc.com/114.114.114.114
+server=/wistapharma.com/114.114.114.114
 server=/wistone.com/114.114.114.114
 server=/wiswonder.com/114.114.114.114
 server=/wit-parking.com/114.114.114.114
