--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15487,6 +15487,7 @@ server=/bjysyunsheng.com/114.114.114.114
 server=/bjythd.com/114.114.114.114
 server=/bjyueshenzj.com/114.114.114.114
 server=/bjywt.com/114.114.114.114
+server=/bjyxl.com/114.114.114.114
 server=/bjyyb.net/114.114.114.114
 server=/bjyyun.com/114.114.114.114
 server=/bjyzfjj.com/114.114.114.114
