--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26223,6 +26223,7 @@ server=/dingfubang.com/114.114.114.114
 server=/dingge.cc/114.114.114.114
 server=/dinggou.org/114.114.114.114
 server=/dinghaiec.com/114.114.114.114
+server=/dinghantech.com/114.114.114.114
 server=/dinghegc.com/114.114.114.114
 server=/dinghengjc.com/114.114.114.114
 server=/dinghuakuai.com/114.114.114.114
