accelerated-domains: add haolifa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39534,6 +39534,7 @@ server=/haoled9999.com/114.114.114.114
 server=/haolexiang.com/114.114.114.114
 server=/haolidayiliao.com/114.114.114.114
 server=/haolietou.com/114.114.114.114
+server=/haolifa.com/114.114.114.114
 server=/haoliners.net/114.114.114.114
 server=/haoling.cc/114.114.114.114
 server=/haolints.com/114.114.114.114
