--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41591,6 +41591,7 @@ server=/hkpep.com/114.114.114.114
 server=/hkproperty.com/114.114.114.114
 server=/hkqbh.com/114.114.114.114
 server=/hkroyal.com/114.114.114.114
+server=/hkrsoft.com/114.114.114.114
 server=/hkscxh.com/114.114.114.114
 server=/hkslg520.com/114.114.114.114
 server=/hkstv.tv/114.114.114.114
