accelerated-domains: add justtop.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51194,6 +51194,7 @@ server=/justjavac.com/114.114.114.114
 server=/justmyblog.net/114.114.114.114
 server=/justpodmedia.com/114.114.114.114
 server=/justsy.com/114.114.114.114
+server=/justtop.com/114.114.114.114
 server=/justwe.site/114.114.114.114
 server=/jutao.com/114.114.114.114
 server=/jutaoshe.com/114.114.114.114
