accelerated-domains: add larkworld.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54434,6 +54434,7 @@ server=/larkroad.com/114.114.114.114
 server=/larksuite.com/114.114.114.114
 server=/larksuiteimg-boe.com/114.114.114.114
 server=/larksuiteimg-pre.com/114.114.114.114
+server=/larkworld.com/114.114.114.114
 server=/larmace.com/114.114.114.114
 server=/larryms.com/114.114.114.114
 server=/larscheng.com/114.114.114.114
