accelerated-domains: add nifdc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62966,6 +62966,7 @@ server=/nies.org/114.114.114.114
 server=/nietou.com/114.114.114.114
 server=/niexiaotao.com/114.114.114.114
 server=/nieyou.com/114.114.114.114
+server=/nifdc.com/114.114.114.114
 server=/nifengz.com/114.114.114.114
 server=/nightanddaythegame.com/114.114.114.114
 server=/nightcity.pub/114.114.114.114
