accelerated-domains: add qingyantek.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68991,6 +68991,7 @@ server=/qingxianrenminyiyuan.com/114.114.114.114
 server=/qingxiaoyun.com/114.114.114.114
 server=/qingxuetang.com/114.114.114.114
 server=/qingxun.com/114.114.114.114
+server=/qingyantek.com/114.114.114.114
 server=/qingyeyun.com/114.114.114.114
 server=/qingyi.com/114.114.114.114
 server=/qingyidai.com/114.114.114.114
