--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15191,6 +15191,7 @@ server=/bjgyzjw.com/114.114.114.114
 server=/bjgyzs.com/114.114.114.114
 server=/bjgzc.com/114.114.114.114
 server=/bjhaiguang.com/114.114.114.114
+server=/bjhanlin.com/114.114.114.114
 server=/bjhdcp.com/114.114.114.114
 server=/bjhdhm.com/114.114.114.114
 server=/bjhdnet.com/114.114.114.114
