--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21778,6 +21778,7 @@ server=/cnccchina.com/114.114.114.114
 server=/cnccdn.com/114.114.114.114
 server=/cncdn.com/114.114.114.114
 server=/cncdnx.com/114.114.114.114
+server=/cncecci.com/114.114.114.114
 server=/cncecyc.com/114.114.114.114
 server=/cncells.net/114.114.114.114
 server=/cncgdns.net/114.114.114.114
