accelerated-domains: add goodwillcis.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34998,6 +34998,7 @@ server=/goodtea.cc/114.114.114.114
 server=/goodtech.live/114.114.114.114
 server=/goodtp.com/114.114.114.114
 server=/goodwe.com/114.114.114.114
+server=/goodwillcis.com/114.114.114.114
 server=/goodwillresource.com/114.114.114.114
 server=/goodyoungtea.com/114.114.114.114
 server=/goodzuji.com/114.114.114.114
