accelerated-domains: add xinhaisoft.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91343,6 +91343,7 @@ server=/xinhaiglobal.com/114.114.114.114
 server=/xinhaimineral.com/114.114.114.114
 server=/xinhaiminingepc.com/114.114.114.114
 server=/xinhaimininggroup.com/114.114.114.114
+server=/xinhaisoft.com/114.114.114.114
 server=/xinhanhd.com/114.114.114.114
 server=/xinhanhr.com/114.114.114.114
 server=/xinhanyx.com/114.114.114.114
