accelerated-domains: add bj-jzgg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15041,6 +15041,7 @@ server=/bj-hengdeli.com/114.114.114.114
 server=/bj-hzzs.com/114.114.114.114
 server=/bj-ipcf.org/114.114.114.114
 server=/bj-jinsly.com/114.114.114.114
+server=/bj-jzgg.com/114.114.114.114
 server=/bj-kpn.com/114.114.114.114
 server=/bj-pr.com/114.114.114.114
 server=/bj-px.com/114.114.114.114
