--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15212,6 +15212,7 @@ server=/bjhsyk.com/114.114.114.114
 server=/bjhsyuntai.com/114.114.114.114
 server=/bjhszp.com/114.114.114.114
 server=/bjhtcch.com/114.114.114.114
+server=/bjhtlckj.com/114.114.114.114
 server=/bjhtzsgs.com/114.114.114.114
 server=/bjhuaxin.com/114.114.114.114
 server=/bjhuiqi.net/114.114.114.114
