--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48556,6 +48556,7 @@ server=/jianliben.com/114.114.114.114
 server=/jianliduo.com/114.114.114.114
 server=/jianlisheji.com/114.114.114.114
 server=/jianlixiu.com/114.114.114.114
+server=/jianliyuan.com/114.114.114.114
 server=/jianloubao.com/114.114.114.114
 server=/jianlow.com/114.114.114.114
 server=/jianlu365.com/114.114.114.114
