--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48922,6 +48922,7 @@ server=/jijiagames.com/114.114.114.114
 server=/jijian.link/114.114.114.114
 server=/jijiang168.com/114.114.114.114
 server=/jijiang5.com/114.114.114.114
+server=/jijianzhineng.com/114.114.114.114
 server=/jijiaoyu.com/114.114.114.114
 server=/jijie168.com/114.114.114.114
 server=/jijifei.com/114.114.114.114
