--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67443,6 +67443,7 @@ server=/ppkankan01.com/114.114.114.114
 server=/ppkao.com/114.114.114.114
 server=/pplib.net/114.114.114.114
 server=/pplive.com/114.114.114.114
+server=/pplm1996.com/114.114.114.114
 server=/pplock.com/114.114.114.114
 server=/ppm-htv.com/114.114.114.114
 server=/ppm2.com/114.114.114.114
