accelerated-domains: add progress-cn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67591,6 +67591,7 @@ server=/programmer.group/114.114.114.114
 server=/programmer.ink/114.114.114.114
 server=/programmercarl.com/114.114.114.114
 server=/programschool.com/114.114.114.114
+server=/progress-cn.com/114.114.114.114
 server=/progressingeography.com/114.114.114.114
 server=/project-oa.com/114.114.114.114
 server=/project-snow.com/114.114.114.114
