accelerated-domains: add rd-cn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70796,6 +70796,7 @@ server=/rcz.cc/114.114.114.114
 server=/rczhuyu.com/114.114.114.114
 server=/rczp.org/114.114.114.114
 server=/rczx.com/114.114.114.114
+server=/rd-cn.com/114.114.114.114
 server=/rd-game.com/114.114.114.114
 server=/rd351.com/114.114.114.114
 server=/rdacs.com/114.114.114.114
