accelerated-domains: add sinowaycarbon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76140,6 +76140,7 @@ server=/sinovdc.com/114.114.114.114
 server=/sinovel.com/114.114.114.114
 server=/sinovio.net/114.114.114.114
 server=/sinovoice.com/114.114.114.114
+server=/sinowaycarbon.com/114.114.114.114
 server=/sinowbs.com/114.114.114.114
 server=/sinowbs.org/114.114.114.114
 server=/sinowealth.com.hk/114.114.114.114
