accelerated-domains: add yushengtang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97849,6 +97849,7 @@ server=/yusainorthwest.com/114.114.114.114
 server=/yushanfang.com/114.114.114.114
 server=/yushangmao.com/114.114.114.114
 server=/yushengny.com/114.114.114.114
+server=/yushengtang.com/114.114.114.114
 server=/yushexuetang.com/114.114.114.114
 server=/yushin88.com/114.114.114.114
 server=/yushiyan.net/114.114.114.114
