--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101786,6 +101786,7 @@ server=/zshtys888.com/114.114.114.114
 server=/zshuoshao.online/114.114.114.114
 server=/zshuoshao.store/114.114.114.114
 server=/zshuoshao.tech/114.114.114.114
+server=/zshypr.com/114.114.114.114
 server=/zsia.org/114.114.114.114
 server=/zsihuo.com/114.114.114.114
 server=/zsincer.com/114.114.114.114
