accelerated-domains: add bisp.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14920,6 +14920,7 @@ server=/bisheziliao.com/114.114.114.114
 server=/bishijie.com/114.114.114.114
 server=/bison-technologies.com/114.114.114.114
 server=/bisonscm.com/114.114.114.114
+server=/bisp.com/114.114.114.114
 server=/bit-king.net/114.114.114.114
 server=/bitahub.com/114.114.114.114
 server=/bitauto.com/114.114.114.114
