accelerated-domains: add beijinglandbridge.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13988,6 +13988,7 @@ server=/beijingguoyitang.com/114.114.114.114
 server=/beijinghopemedcare.com/114.114.114.114
 server=/beijinghuiyizhongxin.com/114.114.114.114
 server=/beijingkbd.com/114.114.114.114
+server=/beijinglandbridge.com/114.114.114.114
 server=/beijingnorthstar.com/114.114.114.114
 server=/beijingrc.com/114.114.114.114
 server=/beijingrc.net/114.114.114.114
