--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14053,6 +14053,7 @@ server=/beiww.com/114.114.114.114
 server=/beiwz.com/114.114.114.114
 server=/beixibaobao.com/114.114.114.114
 server=/beixingmh.com/114.114.114.114
+server=/beiyijt.com/114.114.114.114
 server=/beiyinqi.com/114.114.114.114
 server=/beiyongzhan.com/114.114.114.114
 server=/beiyunzd.com/114.114.114.114
