--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15278,6 +15278,7 @@ server=/bjktwe.com/114.114.114.114
 server=/bjkxgroup.com/114.114.114.114
 server=/bjkzcs.com/114.114.114.114
 server=/bjl777.com/114.114.114.114
+server=/bjlangbo.com/114.114.114.114
 server=/bjlanqiao.com/114.114.114.114
 server=/bjlaw995.com/114.114.114.114
 server=/bjlcs-tech.com/114.114.114.114
