accelerated-domains: add shuimuzhonghui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75470,6 +75470,7 @@ server=/shuimozhuan.net/114.114.114.114
 server=/shuimui.com/114.114.114.114
 server=/shuimujiaju.com/114.114.114.114
 server=/shuimuyulin.com/114.114.114.114
+server=/shuimuzhonghui.com/114.114.114.114
 server=/shuini.biz/114.114.114.114
 server=/shuionland.com/114.114.114.114
 server=/shuipingce.com/114.114.114.114
