--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10202,6 +10202,7 @@ server=/air-level.com/114.114.114.114
 server=/air-matters.com/114.114.114.114
 server=/air-matters.io/114.114.114.114
 server=/air-th.com/114.114.114.114
+server=/air-world.com/114.114.114.114
 server=/air.cc/114.114.114.114
 server=/airacm.com/114.114.114.114
 server=/airasia.com/114.114.114.114
