accelerated-domains: add bmh1958.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15760,6 +15760,7 @@ server=/bme-wx.com/114.114.114.114
 server=/bmeol.com/114.114.114.114
 server=/bmfsm.com/114.114.114.114
 server=/bmgnddfu.com/114.114.114.114
+server=/bmh1958.com/114.114.114.114
 server=/bmijs.com/114.114.114.114
 server=/bmimage.com/114.114.114.114
 server=/bmjet.com/114.114.114.114
