--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19517,6 +19517,7 @@ server=/china-cpu.co/114.114.114.114
 server=/china-cpu.com/114.114.114.114
 server=/china-csm.org/114.114.114.114
 server=/china-d.com/114.114.114.114
+server=/china-denox.com/114.114.114.114
 server=/china-designer.com/114.114.114.114
 server=/china-dingjie.com/114.114.114.114
 server=/china-drm.net/114.114.114.114
