--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13982,6 +13982,7 @@ server=/beijingbang.com/114.114.114.114
 server=/beijingbaomu.com/114.114.114.114
 server=/beijingbio.tech/114.114.114.114
 server=/beijingcenterforthearts.com/114.114.114.114
+server=/beijingcustoms.com/114.114.114.114
 server=/beijingfenxiangkeji.com/114.114.114.114
 server=/beijingfojiao.com/114.114.114.114
 server=/beijinggobroadhospital.com/114.114.114.114
