accelerated-domains: add huaren-scm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43347,6 +43347,7 @@ server=/huaqinchi.com/114.114.114.114
 server=/huaqingkeji.net/114.114.114.114
 server=/huaqiu.com/114.114.114.114
 server=/huaraytech.com/114.114.114.114
+server=/huaren-scm.com/114.114.114.114
 server=/huarenyingyu.com/114.114.114.114
 server=/huarenyizhan.com/114.114.114.114
 server=/huari.com/114.114.114.114
