accelerated-domains: add znzncn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101504,6 +101504,7 @@ server=/znxsw.com/114.114.114.114
 server=/znyp.com/114.114.114.114
 server=/znyshurufa.com/114.114.114.114
 server=/znzmo.com/114.114.114.114
+server=/znzncn.com/114.114.114.114
 server=/znznet.net/114.114.114.114
 server=/znztool.com/114.114.114.114
 server=/znzyf.com/114.114.114.114
