accelerated-domains: add antchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11272,6 +11272,7 @@ server=/antairui.net/114.114.114.114
 server=/antaitebao.com/114.114.114.114
 server=/antangbusiness.com/114.114.114.114
 server=/antbuyhot.com/114.114.114.114
+server=/antchina.com/114.114.114.114
 server=/antcloud-miniprogram.com/114.114.114.114
 server=/antcut.com/114.114.114.114
 server=/antdigital.com/114.114.114.114
