--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22873,6 +22873,7 @@ server=/cosize.com/114.114.114.114
 server=/coslinic.com/114.114.114.114
 server=/cosmoplat.com/114.114.114.114
 server=/cosmoschem.com/114.114.114.114
+server=/cosmosource.com/114.114.114.114
 server=/cosmx.com/114.114.114.114
 server=/cosoar.com/114.114.114.114
 server=/cosofteck.com/114.114.114.114
