accelerated-domains: add cpcep.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22923,6 +22923,7 @@ server=/cpatrk.net/114.114.114.114
 server=/cpbao.com/114.114.114.114
 server=/cpc.cc/114.114.114.114
 server=/cpcccac.com/114.114.114.114
+server=/cpcep.com/114.114.114.114
 server=/cpcni.net/114.114.114.114
 server=/cpcphone.com/114.114.114.114
 server=/cpcw.com/114.114.114.114
