accelerated-domains: add fenglichem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31143,6 +31143,7 @@ server=/fengkui.net/114.114.114.114
 server=/fengli.com/114.114.114.114
 server=/fengli.su/114.114.114.114
 server=/fengliankeji.com/114.114.114.114
+server=/fenglichem.com/114.114.114.114
 server=/fengligroup.com/114.114.114.114
 server=/fenglil.com/114.114.114.114
 server=/fenglingroup.com/114.114.114.114
