accelerated-domains: add ieforever.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45530,6 +45530,7 @@ server=/ieeod0.com/114.114.114.114
 server=/ieepa.org/114.114.114.114
 server=/iefang.com/114.114.114.114
 server=/iefans.net/114.114.114.114
+server=/ieforever.com/114.114.114.114
 server=/iefrd.com/114.114.114.114
 server=/iegcom.com/114.114.114.114
 server=/iegee.net/114.114.114.114
