--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52708,6 +52708,7 @@ server=/kintiger.com/114.114.114.114
 server=/kinval.com/114.114.114.114
 server=/kinzhan.com/114.114.114.114
 server=/kinzoncap.com/114.114.114.114
+server=/kiomodesign.com/114.114.114.114
 server=/kira.cool/114.114.114.114
 server=/kirgen.com/114.114.114.114
 server=/kiriko-china.com/114.114.114.114
