accelerated-domains: add jcmeh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47866,6 +47866,7 @@ server=/jcloudwaf.com/114.114.114.114
 server=/jcloudwaftest.com/114.114.114.114
 server=/jcloudwaftest.net/114.114.114.114
 server=/jclps.com/114.114.114.114
+server=/jcmeh.com/114.114.114.114
 server=/jcmob.net/114.114.114.114
 server=/jcnano.com/114.114.114.114
 server=/jcnk120.com/114.114.114.114
