accelerated-domains: add northland-bio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64274,6 +64274,7 @@ server=/norsencn.com/114.114.114.114
 server=/north30degrees.com/114.114.114.114
 server=/northdy.com/114.114.114.114
 server=/northernlights.ink/114.114.114.114
+server=/northland-bio.com/114.114.114.114
 server=/northsoar.com/114.114.114.114
 server=/northtexascribs.com/114.114.114.114
 server=/nosec.org/114.114.114.114
