--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14351,6 +14351,7 @@ server=/bgbg00.fun/114.114.114.114
 server=/bgbjjtd.com/114.114.114.114
 server=/bgbk.org/114.114.114.114
 server=/bgbluesky.com/114.114.114.114
+server=/bgccn.com/114.114.114.114
 server=/bgctv.com/114.114.114.114
 server=/bgdeco.com/114.114.114.114
 server=/bgdzsw.com/114.114.114.114
