accelerated-domains: add cccc58.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17750,6 +17750,7 @@ server=/cccbs.net/114.114.114.114
 server=/cccc-capital.com/114.114.114.114
 server=/cccc-sdc.com/114.114.114.114
 server=/cccc-sjer.com/114.114.114.114
+server=/cccc58.com/114.114.114.114
 server=/ccccc12kkkkk.com/114.114.114.114
 server=/ccccc33kkkkk.com/114.114.114.114
 server=/ccccc66kkkkk.com/114.114.114.114
