--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19490,6 +19490,7 @@ server=/china-b.com/114.114.114.114
 server=/china-bestmind.com/114.114.114.114
 server=/china-biding.com/114.114.114.114
 server=/china-bluestar.com/114.114.114.114
+server=/china-bme.com/114.114.114.114
 server=/china-caa.org/114.114.114.114
 server=/china-caihua.com/114.114.114.114
 server=/china-capsule.com/114.114.114.114
