accelerated-domains: add jinmajia.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49292,6 +49292,7 @@ server=/jinlvkeji.com/114.114.114.114
 server=/jinlyb.com/114.114.114.114
 server=/jinma-int.com/114.114.114.114
 server=/jinmacy.com/114.114.114.114
+server=/jinmajia.com/114.114.114.114
 server=/jinmalvyou.com/114.114.114.114
 server=/jinmao-ti.com/114.114.114.114
 server=/jinmao88.com/114.114.114.114
