--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19701,6 +19701,7 @@ server=/chinaautoms.com/114.114.114.114
 server=/chinaautosupplier.com/114.114.114.114
 server=/chinaaviationdaily.com/114.114.114.114
 server=/chinab4c.com/114.114.114.114
+server=/chinabac.com/114.114.114.114
 server=/chinabaike.com/114.114.114.114
 server=/chinabaiker.com/114.114.114.114
 server=/chinabancai.com/114.114.114.114
