accelerated-domains: add crwnt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23409,6 +23409,7 @@ server=/cruhut.com/114.114.114.114
 server=/crukings.com/114.114.114.114
 server=/crvc.com/114.114.114.114
 server=/crvic.org/114.114.114.114
+server=/crwnt.com/114.114.114.114
 server=/crx.plus/114.114.114.114
 server=/crx4.com/114.114.114.114
 server=/cry33.com/114.114.114.114
