--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52727,6 +52727,7 @@ server=/kirkcloud.com/114.114.114.114
 server=/kiscoca.com/114.114.114.114
 server=/kisdee.com/114.114.114.114
 server=/kisence.com/114.114.114.114
+server=/kisilicon.com/114.114.114.114
 server=/kisops.com/114.114.114.114
 server=/kiss998.com/114.114.114.114
 server=/kisskisso.com/114.114.114.114
