accelerated-domains: add sinovationmed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76161,6 +76161,7 @@ server=/sinovale.com/114.114.114.114
 server=/sinovast.com/114.114.114.114
 server=/sinovatech.com/114.114.114.114
 server=/sinovatio.com/114.114.114.114
+server=/sinovationmed.com/114.114.114.114
 server=/sinovationventures.com/114.114.114.114
 server=/sinovdc.com/114.114.114.114
 server=/sinovel.com/114.114.114.114
