accelerated-domains: add slreactor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76589,6 +76589,7 @@ server=/slowdark.com/114.114.114.114
 server=/slpi1.com/114.114.114.114
 server=/slpmg.com/114.114.114.114
 server=/slrbs.com/114.114.114.114
+server=/slreactor.com/114.114.114.114
 server=/slready.com/114.114.114.114
 server=/slshareservices.com/114.114.114.114
 server=/slssx.com/114.114.114.114
