accelerated-domains: add zhongqijiye.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100228,6 +100228,7 @@ server=/zhongnongjimu.com/114.114.114.114
 server=/zhongpaiwang.com/114.114.114.114
 server=/zhongpingcapital.com/114.114.114.114
 server=/zhongpujiancai.com/114.114.114.114
+server=/zhongqijiye.com/114.114.114.114
 server=/zhongqijt.com/114.114.114.114
 server=/zhongqingshao.com/114.114.114.114
 server=/zhongqixin360.com/114.114.114.114
