--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101683,6 +101683,7 @@ server=/zq2mqo.com/114.114.114.114
 server=/zq84.com/114.114.114.114
 server=/zqagr.com/114.114.114.114
 server=/zqbubi.xyz/114.114.114.114
+server=/zqbykj.com/114.114.114.114
 server=/zqcaf.com/114.114.114.114
 server=/zqcloud.com/114.114.114.114
 server=/zqcloudgame.com/114.114.114.114
