--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87810,6 +87810,7 @@ server=/windows11.pro/114.114.114.114
 server=/windows7en.com/114.114.114.114
 server=/windowszj.com/114.114.114.114
 server=/winds.red/114.114.114.114
+server=/windsbridge.com/114.114.114.114
 server=/windsns.com/114.114.114.114
 server=/windspeedbike.com/114.114.114.114
 server=/windtch.com/114.114.114.114
