accelerated-domains: add beijinghuafu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13989,6 +13989,7 @@ server=/beijingfojiao.com/114.114.114.114
 server=/beijinggobroadhospital.com/114.114.114.114
 server=/beijingguoyitang.com/114.114.114.114
 server=/beijinghopemedcare.com/114.114.114.114
+server=/beijinghuafu.com/114.114.114.114
 server=/beijinghuiyizhongxin.com/114.114.114.114
 server=/beijingkbd.com/114.114.114.114
 server=/beijinglandbridge.com/114.114.114.114
