--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15355,6 +15355,7 @@ server=/bjreview.com/114.114.114.114
 server=/bjrjgj.com/114.114.114.114
 server=/bjrjtdkj.com/114.114.114.114
 server=/bjrjyy.com/114.114.114.114
+server=/bjrlzyw.com/114.114.114.114
 server=/bjrtcdn.com/114.114.114.114
 server=/bjrun.com/114.114.114.114
 server=/bjrussia-art.com/114.114.114.114
