--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39333,6 +39333,7 @@ server=/hannto.com/114.114.114.114
 server=/hanpian.tv/114.114.114.114
 server=/hanpokou.com/114.114.114.114
 server=/hanqidq.com/114.114.114.114
+server=/hanqigroup.com/114.114.114.114
 server=/hanqinghb.com/114.114.114.114
 server=/hanrunbt.com/114.114.114.114
 server=/hansaoxinxi.xyz/114.114.114.114
