accelerated-domains: add jiaruitec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48714,6 +48714,7 @@ server=/jiarendress.com/114.114.114.114
 server=/jiarenvip.com/114.114.114.114
 server=/jiarenzs.com/114.114.114.114
 server=/jiaronghuahome.com/114.114.114.114
+server=/jiaruitec.com/114.114.114.114
 server=/jiasale.com/114.114.114.114
 server=/jiasaw.com/114.114.114.114
 server=/jiashejianyan.com/114.114.114.114
