accelerated-domains: add makenv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58489,6 +58489,7 @@ server=/makefang.com/114.114.114.114
 server=/makefont.com/114.114.114.114
 server=/makelie.com/114.114.114.114
 server=/makelove.la/114.114.114.114
+server=/makenv.com/114.114.114.114
 server=/makeoptim.com/114.114.114.114
 server=/makepic.net/114.114.114.114
 server=/makepolo.com/114.114.114.114
