--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43698,6 +43698,7 @@ server=/huiji.wiki/114.114.114.114
 server=/huijiame.com/114.114.114.114
 server=/huijian-land.com/114.114.114.114
 server=/huijiaoyun.com/114.114.114.114
+server=/huijiazhileng.com/114.114.114.114
 server=/huijidata.com/114.114.114.114
 server=/huijie.shop/114.114.114.114
 server=/huijiewei.com/114.114.114.114
