--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69401,6 +69401,7 @@ server=/qmail.com/114.114.114.114
 server=/qmancha.com/114.114.114.114
 server=/qmango.com/114.114.114.114
 server=/qmconfig.com/114.114.114.114
+server=/qmcro.com/114.114.114.114
 server=/qmei.me/114.114.114.114
 server=/qmei.vip/114.114.114.114
 server=/qmeikq.com/114.114.114.114
