accelerated-domains: add bjtysj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15433,6 +15433,7 @@ server=/bjtth.org/114.114.114.114
 server=/bjttsf.com/114.114.114.114
 server=/bjtvnews.com/114.114.114.114
 server=/bjtyhj.com/114.114.114.114
+server=/bjtysj.com/114.114.114.114
 server=/bjtyzh.org/114.114.114.114
 server=/bjtzzg.com/114.114.114.114
 server=/bju-flo.com/114.114.114.114
