--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15534,6 +15534,7 @@ server=/bjzqw.com/114.114.114.114
 server=/bjzs.cc/114.114.114.114
 server=/bjzs114.com/114.114.114.114
 server=/bjzunlaotang.com/114.114.114.114
+server=/bjzwbc.com/114.114.114.114
 server=/bjzwhz.com/114.114.114.114
 server=/bjzwx.com/114.114.114.114
 server=/bjzwzx.com/114.114.114.114
