--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16180,6 +16180,7 @@ server=/boyoucy.com/114.114.114.114
 server=/boyouquan.com/114.114.114.114
 server=/boyuan.com/114.114.114.114
 server=/boyuan.net/114.114.114.114
+server=/boyuanjiaxin.com/114.114.114.114
 server=/boyue.com/114.114.114.114
 server=/boyuesh.com/114.114.114.114
 server=/boyuguandao.com/114.114.114.114
