--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24122,6 +24122,7 @@ server=/cytcard.com/114.114.114.114
 server=/cytoniche.com/114.114.114.114
 server=/cyts.com/114.114.114.114
 server=/cytsdl.com/114.114.114.114
+server=/cytslinkage.com/114.114.114.114
 server=/cytsls.com/114.114.114.114
 server=/cytstibet.com/114.114.114.114
 server=/cytuig.com/114.114.114.114
