accelerated-domains: add handongruanjian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39233,6 +39233,7 @@ server=/handisele.com/114.114.114.114
 server=/handme.net/114.114.114.114
 server=/handone.com/114.114.114.114
 server=/handongkj.com/114.114.114.114
+server=/handongruanjian.com/114.114.114.114
 server=/handpk.com/114.114.114.114
 server=/handsfree.work/114.114.114.114
 server=/handu.com/114.114.114.114
