accelerated-domains: add hongshipaint.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42342,6 +42342,7 @@ server=/hongshi-tech.com/114.114.114.114
 server=/hongshi88.com/114.114.114.114
 server=/hongshigroup.com/114.114.114.114
 server=/hongshikai.com/114.114.114.114
+server=/hongshipaint.com/114.114.114.114
 server=/hongshizi.org/114.114.114.114
 server=/hongshn.xyz/114.114.114.114
 server=/hongshu.com/114.114.114.114
