--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71200,6 +71200,7 @@ server=/reyinapp.com/114.114.114.114
 server=/reyoo.com/114.114.114.114
 server=/reyun.com/114.114.114.114
 server=/rezhanwang.com/114.114.114.114
+server=/rf-bed.com/114.114.114.114
 server=/rf-china.com/114.114.114.114
 server=/rf.hk/114.114.114.114
 server=/rfaexpo.com/114.114.114.114
