accelerated-domains: add acgmc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9252,6 +9252,7 @@ server=/acgdb.com/114.114.114.114
 server=/acgdoge.net/114.114.114.114
 server=/acgist.com/114.114.114.114
 server=/acglivefan.com/114.114.114.114
+server=/acgmc.com/114.114.114.114
 server=/acgn.pw/114.114.114.114
 server=/acgorg.com/114.114.114.114
 server=/acgp.xyz/114.114.114.114
