--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12780,6 +12780,7 @@ server=/bagxs.com/114.114.114.114
 server=/bahens.com/114.114.114.114
 server=/bai29.xyz/114.114.114.114
 server=/bai68.com/114.114.114.114
+server=/baiao.com/114.114.114.114
 server=/baibailou.com/114.114.114.114
 server=/baibaipei.com/114.114.114.114
 server=/baibaoyun.com/114.114.114.114
