accelerated-domains: add bescity.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14175,6 +14175,7 @@ server=/beryt111.fun/114.114.114.114
 server=/bes.ren/114.114.114.114
 server=/besbranding.com/114.114.114.114
 server=/beschannels.com/114.114.114.114
+server=/bescity.com/114.114.114.114
 server=/bescloud.com/114.114.114.114
 server=/besclouds.com/114.114.114.114
 server=/besg-bee.com/114.114.114.114
