accelerated-domains: add can-gas.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17384,6 +17384,7 @@ server=/camrymetal.com/114.114.114.114
 server=/camscanner.com/114.114.114.114
 server=/camsnetec.com/114.114.114.114
 server=/can-dao.com/114.114.114.114
+server=/can-gas.com/114.114.114.114
 server=/can-lead.com/114.114.114.114
 server=/can.tv/114.114.114.114
 server=/cana.space/114.114.114.114
