--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12092,6 +12092,7 @@ server=/asp300.com/114.114.114.114
 server=/asp300.net/114.114.114.114
 server=/asp8php.com/114.114.114.114
 server=/aspbc.com/114.114.114.114
+server=/aspiration-cn.com/114.114.114.114
 server=/aspirationtesting.com/114.114.114.114
 server=/aspire-info.com/114.114.114.114
 server=/aspirecn.com/114.114.114.114
