accelerated-domains: add biec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14589,6 +14589,7 @@ server=/biduoxs.com/114.114.114.114
 server=/biduwenxue.com/114.114.114.114
 server=/bidwhy.com/114.114.114.114
 server=/bie-plc.com/114.114.114.114
+server=/biec.com/114.114.114.114
 server=/biechila.com/114.114.114.114
 server=/biede.com/114.114.114.114
 server=/biedoul.com/114.114.114.114
