accelerated-domains: add builddecor.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16545,6 +16545,7 @@ server=/buickcare.net/114.114.114.114
 server=/buidea.com/114.114.114.114
 server=/build-decor.com/114.114.114.114
 server=/build9s.io/114.114.114.114
+server=/builddecor.org/114.114.114.114
 server=/buildface.com/114.114.114.114
 server=/buildhr.com/114.114.114.114
 server=/buildjob.net/114.114.114.114
