--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23032,6 +23032,7 @@ server=/cqbnedu.com/114.114.114.114
 server=/cqbnrc.com/114.114.114.114
 server=/cqbntv.com/114.114.114.114
 server=/cqbys.com/114.114.114.114
+server=/cqc-ts.com/114.114.114.114
 server=/cqc.so/114.114.114.114
 server=/cqcatr.com/114.114.114.114
 server=/cqcb.com/114.114.114.114
