accelerated-domains: add nabluemedia.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62073,6 +62073,7 @@ server=/na2sib.com/114.114.114.114
 server=/na7.cc/114.114.114.114
 server=/naadou.com/114.114.114.114
 server=/naaln.com/114.114.114.114
+server=/nabluemedia.com/114.114.114.114
 server=/naboyi.com/114.114.114.114
 server=/nabucuo.com/114.114.114.114
 server=/nac88.com/114.114.114.114
