accelerated-domains: add gmeditech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34667,6 +34667,7 @@ server=/gmcmonline.com/114.114.114.114
 server=/gmdun.com/114.114.114.114
 server=/gmed.cc/114.114.114.114
 server=/gmedata.com/114.114.114.114
+server=/gmeditech.com/114.114.114.114
 server=/gmedtech.com/114.114.114.114
 server=/gmem.cc/114.114.114.114
 server=/gmfc.cc/114.114.114.114
