accelerated-domains: add lazycomposer.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54574,6 +54574,7 @@ server=/laze.cc/114.114.114.114
 server=/lazyaudio.com/114.114.114.114
 server=/lazybios.com/114.114.114.114
 server=/lazycat.cloud/114.114.114.114
+server=/lazycomposer.com/114.114.114.114
 server=/lazydim.com/114.114.114.114
 server=/lazyren.com/114.114.114.114
 server=/lazystones.com/114.114.114.114
