--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85486,6 +85486,7 @@ server=/vrelai.com/114.114.114.114
 server=/vreqnait.com/114.114.114.114
 server=/vrindabg.com/114.114.114.114
 server=/vrjie.com/114.114.114.114
+server=/vrnew.com/114.114.114.114
 server=/vrnos.com/114.114.114.114
 server=/vrp3d.com/114.114.114.114
 server=/vrpinea.com/114.114.114.114
