--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15057,6 +15057,7 @@ server=/bj-ipcf.org/114.114.114.114
 server=/bj-jinsly.com/114.114.114.114
 server=/bj-jzgg.com/114.114.114.114
 server=/bj-kpn.com/114.114.114.114
+server=/bj-nego.com/114.114.114.114
 server=/bj-pr.com/114.114.114.114
 server=/bj-px.com/114.114.114.114
 server=/bj-ranqi.com/114.114.114.114
