accelerated-domains: add photoncounts.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66673,6 +66673,7 @@ server=/photocnc.com/114.114.114.114
 server=/photocome.com/114.114.114.114
 server=/photohn.com/114.114.114.114
 server=/photoint.net/114.114.114.114
+server=/photoncounts.com/114.114.114.114
 server=/photops.com/114.114.114.114
 server=/photosks.vip/114.114.114.114
 server=/photozoomchina.com/114.114.114.114
