accelerated-domains: add cimingwang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20930,6 +20930,7 @@ server=/ciming.com/114.114.114.114
 server=/cimingaoya.com/114.114.114.114
 server=/cimingbj.com/114.114.114.114
 server=/cimingsy.com/114.114.114.114
+server=/cimingwang.com/114.114.114.114
 server=/cimsic.com/114.114.114.114
 server=/cimtshow.com/114.114.114.114
 server=/cinacom.net/114.114.114.114
