accelerated-domains: add citsbj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21001,6 +21001,7 @@ server=/citiz.net/114.114.114.114
 server=/citizenmech.com/114.114.114.114
 server=/citreport.com/114.114.114.114
 server=/cits-sz.net/114.114.114.114
+server=/citsbj.com/114.114.114.114
 server=/citscq.com/114.114.114.114
 server=/citscsc.com/114.114.114.114
 server=/citsgbt.com/114.114.114.114
