--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23468,6 +23468,7 @@ server=/cscec1b-bj.com/114.114.114.114
 server=/cscec1b.net/114.114.114.114
 server=/cscec7bhb.com/114.114.114.114
 server=/cscec81.com/114.114.114.114
+server=/cscecbjadi.com/114.114.114.114
 server=/cscecst.com/114.114.114.114
 server=/csci.hk/114.114.114.114
 server=/csclc.com/114.114.114.114
