--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25058,6 +25058,7 @@ server=/dayu.work/114.114.114.114
 server=/dayuansouti.com/114.114.114.114
 server=/dayuanzong.com/114.114.114.114
 server=/dayucdn.com/114.114.114.114
+server=/dayue.com/114.114.114.114
 server=/dayue8.com/114.114.114.114
 server=/dayugame.net/114.114.114.114
 server=/dayugslb.com/114.114.114.114
