accelerated-domains: add prs-motion.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67674,6 +67674,7 @@ server=/proya.com/114.114.114.114
 server=/proyy.com/114.114.114.114
 server=/prpracg.com/114.114.114.114
 server=/prs-9hospital.com/114.114.114.114
+server=/prs-motion.com/114.114.114.114
 server=/prsgl.com/114.114.114.114
 server=/prteco.com/114.114.114.114
 server=/prts.wiki/114.114.114.114
