--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14610,6 +14610,7 @@ server=/bigaaa.net/114.114.114.114
 server=/bigaka.com/114.114.114.114
 server=/bigan.net/114.114.114.114
 server=/bigbaicai.com/114.114.114.114
+server=/bigbangux.com/114.114.114.114
 server=/bigbenmeng.com/114.114.114.114
 server=/bigbigai.com/114.114.114.114
 server=/bigbigsun.com/114.114.114.114
