--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43859,6 +43859,7 @@ server=/huiyi8.com/114.114.114.114
 server=/huiyiabc.com/114.114.114.114
 server=/huiyiai.net/114.114.114.114
 server=/huiyicq.net/114.114.114.114
+server=/huiyihealth.com/114.114.114.114
 server=/huiyijh.com/114.114.114.114
 server=/huiying.shop/114.114.114.114
 server=/huiyingde.com/114.114.114.114
