accelerated-domains: add unistrong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84063,6 +84063,7 @@ server=/unispc.com/114.114.114.114
 server=/unispim.com/114.114.114.114
 server=/unissoft.com/114.114.114.114
 server=/unistc.com/114.114.114.114
+server=/unistrong.com/114.114.114.114
 server=/unistrument.com/114.114.114.114
 server=/uniswdc.com/114.114.114.114
 server=/unitconverter.cc/114.114.114.114
