accelerated-domains: add ysxts.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97054,6 +97054,7 @@ server=/ysx9999.com/114.114.114.114
 server=/ysxapp.com/114.114.114.114
 server=/ysxs8.com/114.114.114.114
 server=/ysxsw86.cc/114.114.114.114
+server=/ysxts.com/114.114.114.114
 server=/ysxue.net/114.114.114.114
 server=/ysxyhtz.com/114.114.114.114
 server=/ysxzls.com/114.114.114.114
