--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16201,6 +16201,7 @@ server=/bozhong.com/114.114.114.114
 server=/bozifs.com/114.114.114.114
 server=/bp1w.com/114.114.114.114
 server=/bpaykwai.com/114.114.114.114
+server=/bpec.com/114.114.114.114
 server=/bpgjuice.net/114.114.114.114
 server=/bphxmc.xyz/114.114.114.114
 server=/bpmuseum.com/114.114.114.114
