accelerated-domains: add jygch.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51591,6 +51591,7 @@ server=/jyfcyy.com/114.114.114.114
 server=/jyfund.com/114.114.114.114
 server=/jyfwyun.com/114.114.114.114
 server=/jyg-lighting.com/114.114.114.114
+server=/jygch.com/114.114.114.114
 server=/jygjsq.com/114.114.114.114
 server=/jyglass.net/114.114.114.114
 server=/jygo.cc/114.114.114.114
