accelerated-domains: add ustbtc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84341,6 +84341,7 @@ server=/usryinc.com/114.114.114.114
 server=/usst.store/114.114.114.114
 server=/ustack.com/114.114.114.114
 server=/ustalk.com/114.114.114.114
+server=/ustbtc.com/114.114.114.114
 server=/ustc.edu/114.114.114.114
 server=/ustcers.com/114.114.114.114
 server=/ustclug.org/114.114.114.114
