--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -11076,6 +11076,7 @@ server=/andaike.com/114.114.114.114
 server=/andakc.com/114.114.114.114
 server=/andan.me/114.114.114.114
 server=/andcaifu.com/114.114.114.114
+server=/andertechs.com/114.114.114.114
 server=/andes.tech/114.114.114.114
 server=/andesbrain.com/114.114.114.114
 server=/andeshengtec.com/114.114.114.114
