accelerated-domains: add beiyiskjc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14063,6 +14063,7 @@ server=/beixibaobao.com/114.114.114.114
 server=/beixingmh.com/114.114.114.114
 server=/beiyijt.com/114.114.114.114
 server=/beiyinqi.com/114.114.114.114
+server=/beiyiskjc.com/114.114.114.114
 server=/beiyongzhan.com/114.114.114.114
 server=/beiyunzd.com/114.114.114.114
 server=/beiyxiu.com/114.114.114.114
