accelerated-domains: add ctntech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23744,6 +23744,7 @@ server=/ctlife.tv/114.114.114.114
 server=/ctmon.com/114.114.114.114
 server=/ctn1986.com/114.114.114.114
 server=/ctnma.com/114.114.114.114
+server=/ctntech.com/114.114.114.114
 server=/ctnyypt.com/114.114.114.114
 server=/ctnz.net/114.114.114.114
 server=/ctobsnssdk.com/114.114.114.114
