accelerated-domains: add dagongtech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24468,6 +24468,7 @@ server=/dafork.com/114.114.114.114
 server=/dagangcheng.com/114.114.114.114
 server=/dagongcredit.com/114.114.114.114
 server=/dagongnet.com/114.114.114.114
+server=/dagongtech.com/114.114.114.114
 server=/daguan.com/114.114.114.114
 server=/daguantao.com/114.114.114.114
 server=/dagufood.com/114.114.114.114
