accelerated-domains: add fseig.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32255,6 +32255,7 @@ server=/fsdaton.com/114.114.114.114
 server=/fsdf45.fun/114.114.114.114
 server=/fsdxzhpt.com/114.114.114.114
 server=/fsecity.com/114.114.114.114
+server=/fseig.com/114.114.114.114
 server=/fsemouse.com/114.114.114.114
 server=/fseport.com/114.114.114.114
 server=/fsesa.com/114.114.114.114
