accelerated-domains: add guojiwuye.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36035,6 +36035,7 @@ server=/guojidaigou.com/114.114.114.114
 server=/guojimami.com/114.114.114.114
 server=/guojing-tech.com/114.114.114.114
 server=/guojiseka.com/114.114.114.114
+server=/guojiwuye.com/114.114.114.114
 server=/guojixuexiao.com/114.114.114.114
 server=/guojixuexiao.net/114.114.114.114
 server=/guojixuexiao.org/114.114.114.114
