accelerated-domains: add humblit.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43948,6 +43948,7 @@ server=/humanplustech.com/114.114.114.114
 server=/humanrights-china.org/114.114.114.114
 server=/humanwellcaps.com/114.114.114.114
 server=/humbletg.com/114.114.114.114
+server=/humblit.com/114.114.114.114
 server=/humengyun.com/114.114.114.114
 server=/humensec.com/114.114.114.114
 server=/huming.com/114.114.114.114
