--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71257,6 +71257,7 @@ server=/rfmwave.com/114.114.114.114
 server=/rfndpbq.com/114.114.114.114
 server=/rfthunder.com/114.114.114.114
 server=/rg-marathon.com/114.114.114.114
+server=/rg-pharma.com/114.114.114.114
 server=/rg950.com/114.114.114.114
 server=/rgaxobcs.com/114.114.114.114
 server=/rgb128.com/114.114.114.114
