accelerated-domains: add wehandbio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86627,6 +86627,7 @@ server=/wegameapi.com/114.114.114.114
 server=/wegamex.com.hk/114.114.114.114
 server=/wegdj.com/114.114.114.114
 server=/wegene.com/114.114.114.114
+server=/wehandbio.com/114.114.114.114
 server=/weharvest.com/114.114.114.114
 server=/wehefei.com/114.114.114.114
 server=/wehelpwin.com/114.114.114.114
