--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89335,6 +89335,7 @@ server=/wxjoi.com/114.114.114.114
 server=/wxjsgs.com/114.114.114.114
 server=/wxjsxqc.com/114.114.114.114
 server=/wxjx123.com/114.114.114.114
+server=/wxjzh.com/114.114.114.114
 server=/wxkj666.com/114.114.114.114
 server=/wxkjwlw.com/114.114.114.114
 server=/wxkml.com/114.114.114.114
