--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97347,6 +97347,7 @@ server=/yuegowu.com/114.114.114.114
 server=/yuegui.shop/114.114.114.114
 server=/yueguisuchong.com/114.114.114.114
 server=/yuehaifeed.com/114.114.114.114
+server=/yuehaowy.com/114.114.114.114
 server=/yuehz.com/114.114.114.114
 server=/yueimg.com/114.114.114.114
 server=/yueji.com/114.114.114.114
