--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100238,6 +100238,7 @@ server=/zhonghuadiancang.com/114.114.114.114
 server=/zhonghuaent.com/114.114.114.114
 server=/zhonghuamba.com/114.114.114.114
 server=/zhonghuameiwang.com/114.114.114.114
+server=/zhonghuanjianbj.com/114.114.114.114
 server=/zhonghuanus.com/114.114.114.114
 server=/zhonghuaqiming.com/114.114.114.114
 server=/zhonghuasuan.com/114.114.114.114
