accelerated-domains: add qingline.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69005,6 +69005,7 @@ server=/qingliange.com/114.114.114.114
 server=/qingliangkeji.com/114.114.114.114
 server=/qinglidashi.com/114.114.114.114
 server=/qinglin.net/114.114.114.114
+server=/qingline.net/114.114.114.114
 server=/qinglingvip.com/114.114.114.114
 server=/qinglm.com/114.114.114.114
 server=/qinglongwood.com/114.114.114.114
