accelerated-domains: add bjkeyscin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15284,6 +15284,7 @@ server=/bjk30.com/114.114.114.114
 server=/bjkaihua.com/114.114.114.114
 server=/bjkaihua.net/114.114.114.114
 server=/bjkdvm.com/114.114.114.114
+server=/bjkeyscin.com/114.114.114.114
 server=/bjkqj.com/114.114.114.114
 server=/bjkqyx.com/114.114.114.114
 server=/bjkrtwl.com/114.114.114.114
