accelerated-domains: add bjgk.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15196,6 +15196,7 @@ server=/bjgfa.com/114.114.114.114
 server=/bjggk.com/114.114.114.114
 server=/bjgjjcapital.com/114.114.114.114
 server=/bjgjtjk.com/114.114.114.114
+server=/bjgk.com/114.114.114.114
 server=/bjglxf.com/114.114.114.114
 server=/bjglxt.com/114.114.114.114
 server=/bjgongteng.com/114.114.114.114
