--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15355,6 +15355,7 @@ server=/bjqtsecbase.com/114.114.114.114
 server=/bjqtthirdbase.com/114.114.114.114
 server=/bjqtti.com/114.114.114.114
 server=/bjqyjjlb.com/114.114.114.114
+server=/bjqykc.com/114.114.114.114
 server=/bjqzhd.com/114.114.114.114
 server=/bjqzzh.net/114.114.114.114
 server=/bjranqigz.com/114.114.114.114
