accelerated-domains: add bjwt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15469,6 +15469,7 @@ server=/bjwlapp.com/114.114.114.114
 server=/bjwlslm.com/114.114.114.114
 server=/bjwpjs.com/114.114.114.114
 server=/bjwqxh.com/114.114.114.114
+server=/bjwt.com/114.114.114.114
 server=/bjwwhc.com/114.114.114.114
 server=/bjwyseo.com/114.114.114.114
 server=/bjxbja.com/114.114.114.114
