accelerated-domains: add jiuhengmake.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49597,6 +49597,7 @@ server=/jiugang.com/114.114.114.114
 server=/jiugangbid.com/114.114.114.114
 server=/jiugongzigang.com/114.114.114.114
 server=/jiuhantang365.com/114.114.114.114
+server=/jiuhengmake.com/114.114.114.114
 server=/jiuhewj.com/114.114.114.114
 server=/jiuhongwang.com/114.114.114.114
 server=/jiuhua0566.com/114.114.114.114
