accelerated-domains: add zonci.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101619,6 +101619,7 @@ server=/zomiu.com/114.114.114.114
 server=/zon100.com/114.114.114.114
 server=/zonafs.com/114.114.114.114
 server=/zonboapp.com/114.114.114.114
+server=/zonci.com/114.114.114.114
 server=/zone139.com/114.114.114.114
 server=/zoneben.com/114.114.114.114
 server=/zoneidc.com/114.114.114.114
