accelerated-domains: add bmeicn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15778,6 +15778,7 @@ server=/bme-introduce.com/114.114.114.114
 server=/bme-invite.com/114.114.114.114
 server=/bme-mp.com/114.114.114.114
 server=/bme-wx.com/114.114.114.114
+server=/bmeicn.com/114.114.114.114
 server=/bmeol.com/114.114.114.114
 server=/bmfsm.com/114.114.114.114
 server=/bmgnddfu.com/114.114.114.114
