accelerated-domains: add chosign.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20571,6 +20571,7 @@ server=/choosepickhere.com/114.114.114.114
 server=/chooway.com/114.114.114.114
 server=/chopetto.com/114.114.114.114
 server=/chopshopcut.com/114.114.114.114
+server=/chosign.com/114.114.114.114
 server=/choubag.com/114.114.114.114
 server=/chouchoujiang.com/114.114.114.114
 server=/chouchoumao.com/114.114.114.114
