accelerated-domains: add haikejin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39044,6 +39044,7 @@ server=/haijiaoshi.com/114.114.114.114
 server=/haijiasu.com/114.114.114.114
 server=/haijudoc.com/114.114.114.114
 server=/haijunda.com/114.114.114.114
+server=/haikejin.com/114.114.114.114
 server=/haikeoutdoor.com/114.114.114.114
 server=/haiketrip.com/114.114.114.114
 server=/haikouvw.com/114.114.114.114
