--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72891,6 +72891,7 @@ server=/scichina.com/114.114.114.114
 server=/scicn.net/114.114.114.114
 server=/scidict.org/114.114.114.114
 server=/sciecure.com/114.114.114.114
+server=/sciencecity.net/114.114.114.114
 server=/sciencehr.net/114.114.114.114
 server=/sciengine.com/114.114.114.114
 server=/scientrans.com/114.114.114.114
