accelerated-domains: add eapchina.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28443,6 +28443,7 @@ server=/eamn.net/114.114.114.114
 server=/eamob.com/114.114.114.114
 server=/eanfang.com/114.114.114.114
 server=/eap2.net/114.114.114.114
+server=/eapchina.net/114.114.114.114
 server=/earth-science.net/114.114.114.114
 server=/earth2037.com/114.114.114.114
 server=/earthedu.com/114.114.114.114
