accelerated-domains: add xiaoao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90564,6 +90564,7 @@ server=/xiaoaiscan.net/114.114.114.114
 server=/xiaoaisound.com/114.114.114.114
 server=/xiaoangel.com/114.114.114.114
 server=/xiaoantech.com/114.114.114.114
+server=/xiaoao.com/114.114.114.114
 server=/xiaoapp.io/114.114.114.114
 server=/xiaobafood.com/114.114.114.114
 server=/xiaobai.com/114.114.114.114
