--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98815,6 +98815,7 @@ server=/zcszcm.com/114.114.114.114
 server=/zctec.cc/114.114.114.114
 server=/zctl.net/114.114.114.114
 server=/zctpt.com/114.114.114.114
+server=/zctt.com/114.114.114.114
 server=/zctx.com/114.114.114.114
 server=/zctzgr.com/114.114.114.114
 server=/zcwlsc.com/114.114.114.114
