accelerated-domains: add bjicrm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15246,6 +15246,7 @@ server=/bjhzkq.com/114.114.114.114
 server=/bjiab.com/114.114.114.114
 server=/bjiae.net/114.114.114.114
 server=/bjicpark.com/114.114.114.114
+server=/bjicrm.com/114.114.114.114
 server=/bjidc.net/114.114.114.114
 server=/bjidit.com/114.114.114.114
 server=/bjinfobank.com/114.114.114.114
