--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86650,6 +86650,7 @@ server=/wehelpwin.com/114.114.114.114
 server=/weherepost.com/114.114.114.114
 server=/wehichina.com/114.114.114.114
 server=/wei-ben.com/114.114.114.114
+server=/wei-li.com/114.114.114.114
 server=/wei-ze.com/114.114.114.114
 server=/wei2008.com/114.114.114.114
 server=/wei6.com/114.114.114.114
