--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15272,6 +15272,7 @@ server=/bjjkw.net/114.114.114.114
 server=/bjjmzh.com/114.114.114.114
 server=/bjjnrl.com/114.114.114.114
 server=/bjjnzf.com/114.114.114.114
+server=/bjjqe.com/114.114.114.114
 server=/bjjqzyy.com/114.114.114.114
 server=/bjjsj.com/114.114.114.114
 server=/bjjstyyzzyy.com/114.114.114.114
