accelerated-domains: add keanrui.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52342,6 +52342,7 @@ server=/ke8u.com/114.114.114.114
 server=/keai.icu/114.114.114.114
 server=/keaiq.com/114.114.114.114
 server=/kean1688.com/114.114.114.114
+server=/keanrui.com/114.114.114.114
 server=/keaopt.com/114.114.114.114
 server=/keba.host/114.114.114.114
 server=/kebango.com/114.114.114.114
