--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15391,6 +15391,7 @@ server=/bjsftzxyjhyy.com/114.114.114.114
 server=/bjsgzgs.com/114.114.114.114
 server=/bjshaet.com/114.114.114.114
 server=/bjsheng.com/114.114.114.114
+server=/bjshowinfilm.com/114.114.114.114
 server=/bjshyin.com/114.114.114.114
 server=/bjsidao.com/114.114.114.114
 server=/bjsinglewindow.com/114.114.114.114
