accelerated-domains: add jingchengban.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49144,6 +49144,7 @@ server=/jingcaituijian.com/114.114.114.114
 server=/jingch.net/114.114.114.114
 server=/jingchang.tv/114.114.114.114
 server=/jingchangkan.tv/114.114.114.114
+server=/jingchengban.com/114.114.114.114
 server=/jingchengwl.com/114.114.114.114
 server=/jingchi.net/114.114.114.114
 server=/jingchuhao.com/114.114.114.114
