--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55723,6 +55723,7 @@ server=/ligonggong.com/114.114.114.114
 server=/liguangtaogroup.com/114.114.114.114
 server=/liguhd.com/114.114.114.114
 server=/liguosong.com/114.114.114.114
+server=/lihang-expo.com/114.114.114.114
 server=/lihaoshuyuan.com/114.114.114.114
 server=/liheng1688.com/114.114.114.114
 server=/lihetong.com/114.114.114.114
