accelerated-domains: add b-cro.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12646,6 +12646,7 @@ server=/azyfy.com/114.114.114.114
 server=/azz.net/114.114.114.114
 server=/azzdm.com/114.114.114.114
 server=/b-chem.com/114.114.114.114
+server=/b-cro.com/114.114.114.114
 server=/b-eurochina.com/114.114.114.114
 server=/b-fairy.com/114.114.114.114
 server=/b-k-automation.com/114.114.114.114
