--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56760,6 +56760,7 @@ server=/logiseasy.com/114.114.114.114
 server=/logo-emblem.com/114.114.114.114
 server=/logo123.com/114.114.114.114
 server=/logo123.net/114.114.114.114
+server=/logo2008.net/114.114.114.114
 server=/logo888.com/114.114.114.114
 server=/logo9.net/114.114.114.114
 server=/logoaa.com/114.114.114.114
