--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69096,6 +69096,7 @@ server=/qingyeyun.com/114.114.114.114
 server=/qingyi.com/114.114.114.114
 server=/qingyidai.com/114.114.114.114
 server=/qingyougames.com/114.114.114.114
+server=/qingyun-it.com/114.114.114.114
 server=/qingyunxueshe.com/114.114.114.114
 server=/qingyunzu.com/114.114.114.114
 server=/qingzhanshi.com/114.114.114.114
