--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80748,6 +80748,7 @@ server=/tengxunqiyeyou.com/114.114.114.114
 server=/tengy.com/114.114.114.114
 server=/tengya.com/114.114.114.114
 server=/tengyang666.com/114.114.114.114
+server=/tengye-vc.com/114.114.114.114
 server=/tengyeshiye.com/114.114.114.114
 server=/tengyuejz.com/114.114.114.114
 server=/tengzhihh.com/114.114.114.114
