--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94834,6 +94834,7 @@ server=/ygjctech.com/114.114.114.114
 server=/ygjj.com/114.114.114.114
 server=/ygjzsb.com/114.114.114.114
 server=/yglm.mobi/114.114.114.114
+server=/ygmsy.com/114.114.114.114
 server=/ygread.com/114.114.114.114
 server=/ygsdmedia.com/114.114.114.114
 server=/ygsm.com/114.114.114.114
