accelerated-domains: add jufengcap.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51039,6 +51039,7 @@ server=/jufa-composite.com/114.114.114.114
 server=/jufaanli.com/114.114.114.114
 server=/jufair.com/114.114.114.114
 server=/jufeng313.com/114.114.114.114
+server=/jufengcap.com/114.114.114.114
 server=/jufengcompany.com/114.114.114.114
 server=/jufengputao.com/114.114.114.114
 server=/jufengshang.com/114.114.114.114
