accelerated-domains: add ctis-cn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23745,6 +23745,7 @@ server=/ctils.com/114.114.114.114
 server=/ctimall.com/114.114.114.114
 server=/ctime.com/114.114.114.114
 server=/ctiot.info/114.114.114.114
+server=/ctis-cn.com/114.114.114.114
 server=/ctjin.com/114.114.114.114
 server=/ctjituan.com/114.114.114.114
 server=/ctjl.net/114.114.114.114
