accelerated-domains: add beaucare.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13866,6 +13866,7 @@ server=/bearychat.com/114.114.114.114
 server=/beastush.com/114.114.114.114
 server=/beasure.com/114.114.114.114
 server=/beats-digital.com/114.114.114.114
+server=/beaucare.org/114.114.114.114
 server=/beautifulbank.com/114.114.114.114
 server=/beautifulism.com/114.114.114.114
 server=/beautifullinux.com/114.114.114.114
