--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14384,6 +14384,7 @@ server=/bgrbjt.com/114.114.114.114
 server=/bgrdh.com/114.114.114.114
 server=/bgren.com/114.114.114.114
 server=/bgrimm.com/114.114.114.114
+server=/bgs123.com/114.114.114.114
 server=/bgsdk.net/114.114.114.114
 server=/bgsdyz.com/114.114.114.114
 server=/bgsyb.com/114.114.114.114
