--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25290,6 +25290,7 @@ server=/ddnspod.com/114.114.114.114
 server=/ddnsto.com/114.114.114.114
 server=/ddnx.com/114.114.114.114
 server=/ddong.com/114.114.114.114
+server=/ddonplan.com/114.114.114.114
 server=/ddooo.com/114.114.114.114
 server=/ddoor.net/114.114.114.114
 server=/ddos.com/114.114.114.114
