accelerated-domains: add jingkunagro.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49207,6 +49207,7 @@ server=/jingkebz.com/114.114.114.114
 server=/jingkeleici.com/114.114.114.114
 server=/jingkeyiqi.com/114.114.114.114
 server=/jingkids.com/114.114.114.114
+server=/jingkunagro.com/114.114.114.114
 server=/jinglawyer.com/114.114.114.114
 server=/jinglian88.com/114.114.114.114
 server=/jingliangad.com/114.114.114.114
