--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59221,6 +59221,7 @@ server=/medstarcorp.com/114.114.114.114
 server=/medsuture.com/114.114.114.114
 server=/medtion.com/114.114.114.114
 server=/medwant.com/114.114.114.114
+server=/meecec.com/114.114.114.114
 server=/meegobeta.com/114.114.114.114
 server=/meegoe.com/114.114.114.114
 server=/meekdai.com/114.114.114.114
