--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67122,6 +67122,7 @@ server=/pkucarenjk.com/114.114.114.114
 server=/pkucnooch.com/114.114.114.114
 server=/pkuczuo.com/114.114.114.114
 server=/pkufh.com/114.114.114.114
+server=/pkugac.com/114.114.114.114
 server=/pkulaw.com/114.114.114.114
 server=/pkulaws.com/114.114.114.114
 server=/pkulb.com/114.114.114.114
