accelerated-domains: add shangcon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74065,6 +74065,7 @@ server=/shangc123.net/114.114.114.114
 server=/shangcaifanyi.com/114.114.114.114
 server=/shangchao668.com/114.114.114.114
 server=/shangchuanba.com/114.114.114.114
+server=/shangcon.com/114.114.114.114
 server=/shangdagc.com/114.114.114.114
 server=/shangdandan.com/114.114.114.114
 server=/shangdaotong.com/114.114.114.114
