accelerated-domains: add bjbna.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15115,6 +15115,7 @@ server=/bjbfdt.com/114.114.114.114
 server=/bjbfsj.com/114.114.114.114
 server=/bjbkwy.com/114.114.114.114
 server=/bjblackhole.com/114.114.114.114
+server=/bjbna.com/114.114.114.114
 server=/bjbpi.com/114.114.114.114
 server=/bjbtfu.com/114.114.114.114
 server=/bjbus.com/114.114.114.114
