--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18764,6 +18764,7 @@ server=/cgahz.com/114.114.114.114
 server=/cgaij.com/114.114.114.114
 server=/cgangs.com/114.114.114.114
 server=/cgboo.com/114.114.114.114
+server=/cgbtek.com/114.114.114.114
 server=/cgcss.com/114.114.114.114
 server=/cgdeuvip.com/114.114.114.114
 server=/cgdown.com/114.114.114.114
