--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10518,6 +10518,7 @@ server=/alayu.com/114.114.114.114
 server=/alazv.com/114.114.114.114
 server=/albeche.com/114.114.114.114
 server=/albertaz.com/114.114.114.114
+server=/alc-iot.com/114.114.114.114
 server=/alcy.cc/114.114.114.114
 server=/aldeee.com/114.114.114.114
 server=/aldgo.com/114.114.114.114
