--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64638,6 +64638,7 @@ server=/nuodefund.com/114.114.114.114
 server=/nuoder.com/114.114.114.114
 server=/nuofanpay.com/114.114.114.114
 server=/nuoguangsh.com/114.114.114.114
+server=/nuohotel.com/114.114.114.114
 server=/nuoji.com/114.114.114.114
 server=/nuoke147.com/114.114.114.114
 server=/nuomi.com/114.114.114.114
